--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@mui/material": "^5.15.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-simple-typewriter": "^5.0.1"
+    "react-intersection-observer": "^9.10.2",
+    "react-simple-typewriter": "^5.0.1",
+    "react-spring": "^9.7.3",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
